# horseshoe-gibbs-torch

./: README.md  Taskfile.yml  mise.toml  pyproject.toml
.scripts/prepare-commit/: ipynb.sh  src.sh
notebooks/: fastmvg.ipynb  horseshoe.ipynb
src/horseshoe_gibbs_torch/: __init__.py  base_sampler.py  fast_mvg.py  horseshoe_ms.py
