[project]
name = "horseshoe-gibbs-torch"
version = "0.1.0"
description = "PyTorch implementation of Gibbs sampler for Bayesian linear regression with horseshoe prior."
readme = "README.md"
authors = [
    { name = "mory22k", email = "mory22k@dc.tohoku.ac.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "D", # Docstring conventions
    "I"  # Import conventions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "commitizen>=4.7.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]
